#	$NetBSD: CHANGES-1.4.2,v 1.1.2.23 1999/09/13 23:08:44 he Exp $

A complete list of changes from NetBSD 1.4.1 to NetBSD 1.4.2:

File						Revision(s)
----						--------

bin/pax/tar.c					1.15

  Add the ability to read V7 tar archives which use USTAR-style
  directories.  Addresses PR#8220.  (kleink)

sbin/newfs_msdos/newfs_msdos.c			1.4

  After determining the size of a file being used as an msdosfs image, seek
  back to its start so subsequent writes go to the right places.  (cgd)

lib/libkvm/kvm_file.c				1.14

  Fix kvm_getfiles() so that it works properly on kernel core dumps.  (cgd)

usr.bin/netstat/unix.c				1.18

  Report error returns from kvm_getfiles() more correctly.  (cgd)

sys/lib/libsa/ufs.c				1.26

  Fix a problem that could cause files' seek pointers to be incorrect
  after being opened.  (cgd)

usr.sbin/mbrlabel/mbrlabel.c			1.4-1.5

  Correct usage message and make the MBR examination code function
  properly on architectures which enforce strict alignment.  (cgd)

usr.bin/tail/extern.h				1.4
usr.bin/tail/forward.c				1.16
usr.bin/tail/read.c				1.7
usr.bin/tail/reverse.c				1.11

  Avoid incorrectly-repeated error messages.  (cgd)

sys/msdosfs/denode.h				1.31
sys/msdosfs/fat.h				1.13
sys/msdosfs/msdosfs_fat.c			1.31
sys/msdosfs/msdosfs_vnops.c			1.83

  Fix LP64 problems which made the MS-DOS file system unusable on
  NetBSD/alpha as reported in PR#8037 and several other problems
  encountered while researching it (NFS exporting and printf
  formats).  (cgd)

usr.bin/find/extern.h				1.12
usr.bin/find/find.h				1.12
usr.bin/find/find.1				1.22-1.23
usr.bin/find/function.c				1.31
usr.bin/find/option.c				1.13

  Implement -regex and -iregex primaries which behave similarly (but
  not identically) to the GNU find primaries of the same names.  (The
  differences are caused by differences in the Basic Regular
  Expression implementations.)  (cgd)

distrib/sets/lists/comp/md.arm32		1.25
